Arreglo calculo de fecha desfasada por 1 dia

--- a/myapp/templates/grafico_vtaxmediopago.html
+++ b/myapp/templates/grafico_vtaxmediopago.html
@@ -147,7 +147,7 @@
        
           
           // The Endpoint URL
-          let url = '/get_sales_data/';
+          let url = '/get_vtaxmediopago_data/';
           fetch(url+'?'+new URLSearchParams({
                   from_date: $('#fromDate').val(),
                   to_date: $('#toDate').val(),
