--- a/myapp/templates/grafico_vtaxdia.html
+++ b/myapp/templates/grafico_vtaxdia.html
@@ -309,7 +309,7 @@
             //Render data in datatable
             // Assuming you get the JSON response from some API or AJAX request
             console.log(json.data);
-            console.log(typeof json);
+            console.log(json.labels);
 
             data=json;
 
@@ -332,10 +332,11 @@
 
                 const date = new Date(fecha);
 
-                // Extract the day, month, and year components
-                const day = String(date.getDate()).padStart(2, '0');
-                const month = String(date.getMonth() + 1).padStart(2, '0'); // Note: Months are zero-based in JS
-                const year = date.getFullYear();
+                // Extract the day, month, and year 
+                // Tomar en cuenta timezones para evitar errores
+                const day = String(date.getUTCDate()).padStart(2, '0');
+                const month = String(date.getUTCMonth() + 1).padStart(2, '0'); // Note: Months are zero-based in JS
+                const year = date.getUTCFullYear();
 
                 // Format the date in DD/MM/YYYY format
                 cell1.textContent =  `${day}/${month}/${year}`;
